--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "standard": "^14.1.0"
   },
   "dependencies": {
-    "dotenv":"16.1.4"
+    "dotenv":"16.1.4",
+    "express": "^4.17.1"
   }
 }
