--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv":"16.1.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "3.3.0"
   }
 }
