--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv":"16.1.4",
     "express": "^4.17.1",
-    "node-fetch": "3.3.0"
+    "node-fetch": "3.3.0",
+    "nodemon": "^2.0.20"
   }
 }
