--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv":"16.1.4",
     "express": "^4.17.1",
     "node-fetch": "3.3.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path":"0.12.7"
   }
 }
